[package]
name = "cs2love"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
buttplug = "10.0"
eframe = "0.24.1"
egui = "0.24.1"
futures = "0.3"
log = "0.4.20"
rfd = "0.17.2"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav", "mp3", "vorbis", "flac"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
time = "0.3.44"
tokio = { version = "1.34.0", features = ["full"] }
url = "2"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"
